--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">MusicPlayerDemo</string>
+
+    <string-array name="backgroundMus">
+        <item>Go Tech Go!</item>
+        <item>Enter Sandman</item>
+        <item>Yaya Kolo</item>
+    </string-array>
+
+    <string-array name="MusArray">
+        <item>Clapping</item>
+        <item>Cheering</item>
+        <item>Go Hokies</item>
+    </string-array>
 </resources>
